home, about and contact components now has bootstrap and markup

--- a/ngapp/src/app/contact/contact.component.html
+++ b/ngapp/src/app/contact/contact.component.html
@@ -1,1 +1,36 @@
-<p>contact works!</p>
+<div class="jumbotron mt-5 bg-danger text-light rounded-0">
+    <div class="container">
+        <h1 class="display-3">Contact UNSEENbio</h1>
+        <hr class="my-4">
+    
+        <div class="row ml-0">
+            <div class="row md-3">
+                <p class="ml-4 mr-5">UNSEENbio APS - CVR 40046585 - is a private biotech company situated in DTU Science Park north of Copenhagen. With unique knowledge, innovative solutions and laboratories, we offer health feedback based on insight of the microbiota of the guts. </p>
+            </div>
+        </div>
+
+        <hr class="my-4">
+        
+        <div class="row ml-0">
+            <div class="col-md-4">
+                <p>DTU Science Park</p>
+                <p>Agern Allé 24</p>
+                <p>2970 Hørsholm, Denmark</p>
+                <p>kontakt@unseenbio.com</p>
+            </div>
+            <div class="col-md-4">
+            
+                <p>CEO Johan Bruun Hartmann</p>
+                <p>+45 26 13 14 26</p>
+                <p>johan@unseenbio.com</p>
+            </div>
+            <div class="col-md-4">
+                
+                <p>COO Jens B. Gandløse</p>
+                <p>+45 20 40 61 12</p>
+                <p>jens@unseenbio.com</p>
+            </div>
+        </div>
+            
+    </div>
+</div>
