--- a/ngapp/src/app/home/home.component.html
+++ b/ngapp/src/app/home/home.component.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<div class="jumbotron mt-5 bg-danger text-light rounded-0">
+    <div class="container">
+        <h1 class="display-3">UNSEENbio</h1>
+        <p class="lead">The company that helps people adjust their diet, to achieve a better lifestyle. Optimize bacteria balance in your stomach through custom made diet, with the help of our experts</p>
+        <hr class="my-4">
+        <p>If you have challenges where your guts have potential influence? UNSEENbio have specialized solutions for several of these challenges</p>
+        <p class="lead">
+        <a class="btn btn-light btn-lg rounded-0" href="#" role="button">Learn more</a>
+        </p>
+        <hr class="my-4">
+    </div>
+    <div class="row ml-0">
+        <div class="col-md-4">
+            <h4>Gather</h4>
+            <p>Gather a sample from  home using the shit-kit and send it to the lab</p>
+        </div>
+        <div class="col-md-4">
+            <h4>Analyze</h4>
+            <p>Wait for the lab to analyze your sample and customize your diet</p>
+        </div>
+        <div class="col-md-4">
+            <h4>Optimize</h4>
+            <p>Optimize stomach balance, with a new and customized diet that fits you</p>
+        </div>
+    </div>
+</div>
