--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -25,7 +25,6 @@
       <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
 
     </ul>
-    
   </div>
 </nav>
 
@@ -33,3 +32,18 @@
   <router-outlet></router-outlet>
 </div>
 
+<!-- Footer -->
+<footer class="page-footer font-small unique-color-dark pt-4">
+
+  <!-- Footer Elements -->
+  
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: benjaminfester /
+    <a href="https://unseenbio.com/"> unseenbio.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
