--- a/ngapp/src/app/login/login.component.html
+++ b/ngapp/src/app/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="row pt-5">
+    <div class="col-md-6 mx-auto">
+        <div class="card rounded-0">
+            <div class="card-header rounded-0 text-light bg-danger">
+                <h3 class="font-weight-light">Log in</h3>
+            </div>
+            <div class="card-body rounded-0">
+                <form class="form">
+                    <div class="form-group">
+                        <label for="">Username</label>
+                        <input [(ngModel)]="loginUserData.username" name="username" type="text" class="form-control rounded-0" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Password</label>
+                        <input [(ngModel)]="loginUserData.password" name="password" type="password" class="form-control rounded-0" required>
+                    </div>
+                    <button (click)="loginUser()" type="button" class="btn btn-danger float-right rounded-0">Log in</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
