--- a/ngapp/src/app/register/register.component.html
+++ b/ngapp/src/app/register/register.component.html
@@ -1,1 +1,31 @@
-<p>register works!</p>
+<div class="row pt-5">
+    <div class="col-md-6 mx-auto">
+        <div class="card rounded-0">
+            <div class="card-header rounded-0 text-light bg-danger">
+                <h3 class="font-weight-light">Register</h3>
+            </div>
+            <div class="card-body rounded-0">
+                <form class="form">
+                    <div class="form-group">
+                        <label>Email</label>
+
+                            <input [(ngModel)]="registerUserData.email" name="email" 
+                            type="text" class="form-control rounded-0"required>
+                            
+                    </div>
+
+                    <div class="form-group">
+                        <label for="">Password</label>
+                            <input [(ngModel)]="registerUserData.password"
+                            name="password"
+                            type="password"
+                            class="form-control rounded-0"
+                            required>
+                    </div>
+                    <button (click)="registerUser()" type="button" class="btn btn-danger float-right rounded-0">Register</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
