--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -3,6 +3,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <ngx-alerts></ngx-alerts>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -35,15 +36,15 @@
 <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark pt-4">
 
-  <!-- Footer Elements -->
-  
-  <!-- Footer Elements -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright: benjaminfester /
-    <a href="https://unseenbio.com/"> unseenbio.com</a>
+  <div class="footer-copyright text-center py-3">
+    © 2020 Copyright: benjaminfester /
+    <a href="https://unseenbio.com/"> unseenbio.com / </a>
+    <a href="#" class="fa fa-facebook ml-1 mr-1"></a>
+    <a href="#" class="fa fa-twitter ml-1 mr-1"></a>
+    <a href="#" class="fa fa-instagram ml-1 mr-1"></a>
+    <a href="#" class="fa fa-linkedin ml-1 mr-1"></a>
+    
   </div>
-  <!-- Copyright -->
-
+  
 </footer>
 <!-- Footer -->
